refactor: migrated from ini4j to apache.commons due to vulnerabilities
- New IniUtils class to read values from ini
- Converted the City.java class to record and now handles map limits
- obj.dat
 # Almost all keys were renamed in English for better consistency.
 # The “magical_weapon” flag was added to differentiate it from the ‘magical_power’ key (formerly called “StaffPower”), so now we have three types
   of weapons: RANGED_WEAPON, MAGICAL_WEAPON, and MELEE_WEAPON
 # Now the blacksmithing skill covers both the manufacture of items that require ingots and the smelting of ore to obtain them. This means
   that the “MinSkill” key, which was used to represent the skill required to smelt ore and also served to represent
   the skill required to use ships (boat, galley, and galleon), has been removed. Now, in order to use ships, the “navigation_skill” skill has been created, and the skill for smelting ore (formerly ‘MinSkill’) is integrated into “smithing_skill.”

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,7 +56,7 @@ jobs:
         # Parametros
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '17' # Podria usar una varias versiones con una matrix (ver ejemplo https://github.com/apache/commons-configuration/blob/master/.github/workflows/maven.yml)
           cache: maven # Habilita cache para dependencias Maven, lo cual es excelente para acelerar builds futuras
           # Util para monorepos ya que permite un cache mas granular basado en archivos especificos
           cache-dependency-path: |
